fasto/tests/task-1-tests/div-zero.err
Type error: Attempt to divide by 0 at line 2, column 10
