fasto/tests/task-1-tests/div-zero.fo
fun int main() =
  write(4/0)
